--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     </head>
     <body>
         <p>This is a test file</p>
+        
+        <p> I have added it on git</p>
+        
     </body>
 </html>
